# FragBERTa

./: .gitignore  LICENSE  README.md  pyproject.toml  test_env.py
configs/: config_pretrain.yaml
data/finetune/cleaned/classification/: bace_cleaned.csv  bbbp_cleaned.csv  sider_cleaned.csv  tox21_cleaned.csv
data/finetune/cleaned/regression/: esol_cleaned.csv  freesolv_cleaned.csv  lipo_cleaned.csv  pdbbind_cleaned.csv
data/tokenizer/roberta_fast_tokenizer_BPE/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
notebooks/: clean_moleculenet.ipynb
scripts/: downstream_prediction_on_smiles.py  finetuning_with_hpopt.py  prepare_finetuning_data.py  pretrain.py  run_all_finetuning_tasks.sh  utils.py
